[package]
name = "man"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-clique/man"
documentation = "https://docs.rs/man"
description = "Generate structured man pages"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]

[dev-dependencies]
