[package]
name = "man"
version = "0.3.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-clique/man"
documentation = "https://docs.rs/man"
description = "Generate structured man pages"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
roff = "0.1.0"

[dev-dependencies]
